--- a/ngapp/src/index.html
+++ b/ngapp/src/index.html
@@ -34,11 +34,12 @@
 <body class="rootBody">
   <app-root></app-root>
 </body>
-<script src="assets/js/bot.js"></script>
+<!-- Taidgin scripts -->
+<!-- <script src="assets/js/bot.js"></script>
 <script src="assets/js/Rivescript.js"></script>
 <script src="assets/js/Questions.js"></script>
 <script src="assets/js/chatbotDb.js"></script>
 <script src="assets/js/chatbotAudio.js"></script>
 <script src="assets/js/recordAudio.js"></script>
-<script src="assets/js/framework.js"></script>
+<script src="assets/js/framework.js"></script> -->
 </html>
